configure image preload

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 <div id="itemContainer"></div>
 
+<div id="loadingMessage">LOADING...</div>
+
 <div class="buttonContainer">
   <button id="loadMoreBtn">
     load more
