update api endpoint + mvm stamp url + preview image + archive unused

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='https://easycss.github.io/easytypo/index.css'>
   <link rel='stylesheet' href='https://easycss.github.io/easyreset/index.css'>
-  <link rel='shortcut icon' href='https://mvmblog.olk1.com/mvm-stamp.jpg' type='image/x-icon' />
+  <link rel='shortcut icon' href='https://raw.githubusercontent.com/mattheweq/icons-repo/main/mvm-stamp.jpg' type='image/x-icon' />
   <script defer src='loadmore.js'></script>
   <link rel='stylesheet' href='style.css'>
   <title>Matthew via Music - Discography</title>
@@ -15,7 +15,7 @@
 
 
 <header>
-  <img src="https://mvmblog.olk1.com/mvm-stamp.jpg" alt="Matthew via Music">
+  <img src="https://raw.githubusercontent.com/mattheweq/icons-repo/main/mvm-stamp.jpg" alt="Matthew via Music">
   <h1>&nbsp;Discography&nbsp;</h1>
 </header>
 
